# skia

./: BUILD.gn
apps/0010_hello_world/: HelloWorld.cpp  HelloWorld.h
apps/0010_hello_world/HelloWorldLib/: BUILD.gn  HelloWorldApp.cpp  HelloWorldApp.h
apps/0010_hello_world/app/: HelloWorldApp.cpp
apps/0010_hello_world/lib/: HelloWorldApp.cpp  HelloWorldApp.h
apps/0020_demo_app/: Demo.cpp
apps/0020_demo_app/DemoAppLib/: BUILD.gn  DemoApp.cpp  DemoApp.h  DemoLayer.cpp  DemoLayer.h  DemoPage1.cpp  DemoPage1.h  DemoPage2.cpp  DemoPage2.h  DemoPage3.cpp  DemoPage3.h
apps/0020_skottie_viewer/: SkottieViewer.cpp  SkottieViewer.h
apps/0020_skottie_viewer/SkottieViewerLib/: SkottieViewerApp.h
apps/0020_skottie_viewer/app/: SkottieViewerApp.cpp  SkottieViewerApp.h
apps/0030_skottie_viewer/: SkottieViewer.cpp  SkottieViewer.h
apps/0030_skottie_viewer/SkottieViewerLib/: BUILD.gn  SkottieViewerApp.cpp  SkottieViewerApp.h
apps/GigaApp/: BUILD.gn  FPSLayer.cpp  FPSLayer.h  GigaApp.cpp  GigaApp.h  GigaAppLayer.h
apps/GigaAppLib/: BUILD.gn  FPSLayer.cpp  GigaApp.h  GigaAppLayer.h  GigaAppPage.h  GigaFont.cpp  GigaFont.h  GigaMainApp.cpp  GigaMainApp.h  GigaUI.cpp  GigaUI.h  GigaUtils.cpp  GigaUtils.h  GigaWidget.cpp  GigaWidget.h  TemplateLayer.cpp  TemplateLayer.h  UILayer.cpp  UILayer.h
apps/GigaAppLib/Containers/: GigaColumn.cpp  GigaColumn.h  GigaRow.cpp  GigaRow.h
apps/GigaAppLib/Widgets/: GigaIcon.cpp  GigaIcon.h  GigaImage.cpp  GigaImage.h  GigaText.cpp  GigaText.h
apps/SkiaApp/: BUILD.gn  SkiaApp.cpp  SkiaApp.h
b/: all  android-all  android-arm-debug  android-arm-release  android-arm64-debug  android-arm64-debug-app  android-arm64-release  android-arm64-release-app  android-dev  android-x64-debug  android-x64-release  android-x86-debug  android-x86-release  arm64-all  arm64-debug  arm64-dev  arm64-devclean  arm64-release  armv6-debug  armv6-release  armv7-debug  armv7-release  armv8-debug  armv8-release  dev  devclean  ios-all  ios-debug  ios-debug-deploy  ios-dev  ios-release  ios-release-deploy  ios-sim  ios-sim-debug  ios-sim-debug-deploy  ios-sim-release  ios-sim-release-deploy  ldev  linux-all  linux-debug  (+18 more)
gn/: BUILDCONFIG.gn
modules/canvaskit/: BUILD.gn  Makefile  canvaskit_bindings.cpp
modules/canvaskit/npm_build/: 0010_HelloWorldApp.html  0020_DemoApp.html  0030_SkottieViewer.html
modules/skottie/gm/: SkottieGM.cpp
platform_tools/android/apps/: build.gradle  settings.gradle
platform_tools/android/apps/DemoApp/: build.gradle
platform_tools/android/apps/DemoApp/src/main/: AndroidManifest.xml
platform_tools/android/apps/DemoApp/src/main/java/org/skia/viewer/: ViewerActivity.java  ViewerApplication.java
platform_tools/android/apps/DemoApp/src/main/res/layout/: activity_main.xml
platform_tools/android/apps/DemoApp/src/main/res/layout-xlarge-land/: activity_main.xml
platform_tools/android/apps/HelloWorld/: build.gradle
platform_tools/android/apps/HelloWorld/src/main/: AndroidManifest.xml
platform_tools/android/apps/HelloWorld/src/main/java/org/skia/viewer/: ViewerApplication.java
platform_tools/android/apps/HelloWorldApp/: build.gradle
platform_tools/android/apps/HelloWorldApp/src/main/: AndroidManifest.xml
platform_tools/android/apps/HelloWorldApp/src/main/java/org/skia/viewer/: ViewerApplication.java
platform_tools/android/apps/SkottieViewerApp/: build.gradle
platform_tools/android/apps/SkottieViewerApp/src/main/: AndroidManifest.xml
platform_tools/android/apps/SkottieViewerApp/src/main/java/org/skia/viewer/: ViewerApplication.java
platform_tools/android/apps/gradle/wrapper/: gradle-wrapper.properties
platform_tools/android/apps/viewer/src/main/java/org/skia/viewer/: ViewerActivity.java  ViewerApplication.java
resources/skottie/: BatteryEmpty.json  Charging.json  ChargingError.json  ChargingFast.json  ChargingFull.json  Menu.json  Shutdown.json  Start.json
tools/: serve_wasm.py
tools/sk_app/: Window.cpp
tools/sk_app/android/: Window_android.cpp  Window_android.h  surface_glue_android.cpp  surface_glue_android.h
