declare_args() {
  skia_enable_gigaapplib = true
}

import("../../gn/skia.gni")

config("public_config") {
  if (skia_enable_gigaapplib) {
    include_dirs = [ 
      "./"
    ]
  }
}

static_library("GigaAppLib") {
  if (skia_enable_gigaapplib) {
    public_configs = [ ":public_config" ]
    include_dirs = [ 
      "./",
      "../../../third_party/externals/imgui"
    ]
    if (is_win) {
      cflags = [ "-DWIN32", "/EHsc" ]
      libs = [ 
        "setupapi.lib",
        "advapi32.lib",
        "ws2_32.lib",
        "mswsock.lib",
      ]       
    }
    else {
      cflags = [ "-fexceptions" ]
    }
    deps = [
      "../..:skia"
    ]
    sources = [
      "FPSLayer.cpp",
      "TemplateLayer.cpp",
      "GigaUI.cpp",
      "GigaUtils.cpp",
      "GigaWidget.cpp",
      "GigaFont.cpp",
      "Containers/GigaColumn.cpp",
      "Widgets/GigaImage.cpp",
      "Widgets/GigaText.cpp",
      "Widgets/GigaIcon.cpp",
    ]
  }
}
