# Copyright 2019 Google LLC
#
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

declare_args() {
  skia_enable_giga_skiaapp = true
}

import("../../gn/skia.gni")

config("public_config") {
  if (skia_enable_giga_skiaapp) {
    include_dirs = [ 
      "./",
    ]
  }
}

static_library("SkiaApp") {
  if (skia_enable_giga_skiaapp) {
    public_configs = [ ":public_config" ]
    defines = [  ]    
    include_dirs = [ 
      "./",
    ]
    if (is_win) {
      cflags = [ "-DWIN32" ]
      libs = [ 
        "setupapi.lib",
        "advapi32.lib",
        "ws2_32.lib",
        "mswsock.lib",
      ]       
    }
    deps = [
      "../..:skia",
      "//third_party/imgui",
    ]
    sources = [
      "SkiaApp.h",
      "SkiaApp.cpp",
    ]
    if (target_cpu != "wasm") {
      sources += [
      ]
    }
    #configs += [ "../../:skia_private" ]
    if (skia_enable_tools) {
      configs += [ "../../:our_vulkan_headers" ]
    }
  }
}
