declare_args() {
  skia_enable_helloworldlib = true
}

import("../../../gn/skia.gni")

config("public_config") {
  if (skia_enable_helloworldlib) {
    include_dirs = [ 
      "./"
    ]
  }
}

static_library("HelloWorldLib") {
  if (skia_enable_helloworldlib) {
    public_configs = [ ":public_config" ]
    include_dirs = [ 
      "./",
      "../../../third_party/externals/imgui"
    ]
    if (is_win) {
      cflags = [ "-DWIN32", "/EHsc" ]
      libs = [ 
        "setupapi.lib",
        "advapi32.lib",
        "ws2_32.lib",
        "mswsock.lib",
      ]       
    }
    else {
      cflags = [ "-fexceptions" ]
    }
    deps = [
      "../../..:skia"
    ]
    sources = [
      "HelloWorldApp.cpp",
      "../../GigaApp/FPSLayer.cpp",
    ]
  }
}
