declare_args() {
  skia_enable_skottieviewerlib= true
}

import("../../../gn/skia.gni")

config("public_config") {
  if (skia_enable_skottieviewerlib) {
    include_dirs = [ 
      "./"
    ]
  }
}

static_library("SkottieViewerLib") {
  if (skia_enable_skottieviewerlib) {
    public_configs = [ ":public_config" ]
    include_dirs = [ 
      "./",
      "../../../third_party/externals/imgui"
    ]
    if (is_win) {
      cflags = [ "-DWIN32", "/EHsc" ]
      libs = [ 
        "setupapi.lib",
        "advapi32.lib",
        "ws2_32.lib",
        "mswsock.lib",
      ]       
    }
    else {
      cflags = [ "-fexceptions" ]
    }
    deps = [
      "../../..:skia"
    ]
    sources = [
      "SkottieViewerApp.cpp",
    ]
  }
}
